--- a/finalModule/finalModule/src/main/resources/templates/login.html
+++ b/finalModule/finalModule/src/main/resources/templates/login.html
@@ -20,11 +20,11 @@
       <form name="f" action="/login" method="POST">
         <div class="input-block">
           <label class="input-label">Tên đăng nhập</label>
-          <input type="text" name="username" placeholder="Username" th:value="${username}">
+          <input type="text" name="username" placeholder="Tên đăng nhập" th:value="${username}">
         </div>
         <div class="input-block">
           <label class="input-label">Mật khẩu</label>
-          <input type="password" name="password" placeholder="Password" th:value="${password}">
+          <input type="password" name="password" placeholder="Mật khẩu" th:value="${password}">
         </div>
 
         <div class="modal-buttons">
